storage/maria/ma_checkpoint.c
@@ -340,6 +340,7 @@ int ma_checkpoint_init(ulong interval)
     {
       /* thread lives, will have to be killed */
       checkpoint_control.status= THREAD_RUNNING;
+      pthread_detach(th);
     }
   }
   DBUG_RETURN(res);
